<resources>
    <string name="app_name" translatable="false">WisdomPills</string>
    <string name="btn_register">Sign up</string>
    <string name="btn_login">Sign in</string>
    <string name="lbl_WisdomPills">Wisdom Pills</string>
    <string name="description_ivWisdom">An old and Wisdom man eating pills.</string>
    <string name="autocompleted_textview">Enter your pill</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="btn_add">Add</string>
    <string name="et_email" translatable="false">E-mail</string>
    <string name="et_password">Password</string>
    <string name="et_name">Name</string>
    <string name="et_repeatpassword">Repeat the password</string>
    <string name="btn_reg">Register now</string>
    <string name="toolbar">Menu</string>
    <string name="hint_title_pill">Enter  title</string>
    <string name="hint_pill">Enter here your pill</string>
    <string name="welcome">Welcome %1$s!</string>
    <string name="OK" translatable="false">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="toast_enter_value">Please enter a value</string>
    <string name="toast_fill_all_fields">Please fill in all fields</string>
    <string name="text_alert_dia_confirmation">Confirmation</string>
    <string name="text_alert_dia_proceed">Are you sure you want to proceed?</string>
    <string name="toast_added_successfully">Note added successfully</string>
    <string name="toast_cancel_clicked">Cancel clicked</string>
    <string name="btn_show">Show new Activity</string>
    <string name="preference_darkMode">Activate night mode</string>
    <string name="toast_loading">Loading data, please wait...</string>
    <string name="toast_fields">Please, fill in all fields</string>
    <string name="toast_no_users">No registered users found</string>
    <string name="toast_incorrect">User or password is not correct</string>
    <string name="web">Web page</string>
    <string name="about">About this</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_developed">Developed by Lucas Serrano</string>
    <string name="not_implemented">Search is not implemented yet</string>
    <string name="alert_dialog_are_you_sure">Are you sure?</string>
    <string name="pub_med" translatable="false">PubMed</string>
    <string name="free_pik" translatable="false">FreePik</string>
    <string name="auto_text">Enter something</string>


</resources>